--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Accordion</title>
   </head>
   <body class="px-4">
-    <div class="accordion my-5 border-x border-t  border-blue-800 rounded-t-md">
-      <div class="accordion-item  ">
+    <div class="accordion my-5 border-x border-t border-blue-800 rounded-t-md">
+      <div class="accordion-item">
         <div
           class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center rounded-t-md"
         >
@@ -18,15 +18,28 @@
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
-            viewBox="0 0 24 24" class="downArrow"
+            viewBox="0 0 24 24"
+            class="downArrow"
           >
             <path
               d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
             ></path>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="upArrow hidden"><path d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"></path></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            class="upArrow hidden"
+          >
+            <path
+              d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"
+            ></path>
+          </svg>
         </div>
-        <div class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800">
+        <div
+          class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800"
+        >
           <p>
             It is shown by default, until the collapse plugin adds the
             appropriate classes that we use to style each element. These classes
@@ -38,24 +51,37 @@
           </p>
         </div>
       </div>
-      <div class="accordion-item  ">
+      <div class="accordion-item">
         <div
-          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center "
+          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center"
         >
           <h1 class="text-lg font-bold">Accordion Item #2</h1>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
-            viewBox="0 0 24 24" class="downArrow"
+            viewBox="0 0 24 24"
+            class="downArrow"
           >
             <path
               d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
             ></path>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="upArrow hidden"><path d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"></path></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            class="upArrow hidden"
+          >
+            <path
+              d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"
+            ></path>
+          </svg>
         </div>
-        <div class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800">
+        <div
+          class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800"
+        >
           <p>
             It is shown by default, until the collapse plugin adds the
             appropriate classes that we use to style each element. These classes
@@ -67,24 +93,37 @@
           </p>
         </div>
       </div>
-      <div class="accordion-item  ">
+      <div class="accordion-item">
         <div
-          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center "
+          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center"
         >
           <h1 class="text-lg font-bold">Accordion Item #3</h1>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
-            viewBox="0 0 24 24" class="downArrow"
+            viewBox="0 0 24 24"
+            class="downArrow"
           >
             <path
               d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
             ></path>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="upArrow hidden"><path d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"></path></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            class="upArrow hidden"
+          >
+            <path
+              d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"
+            ></path>
+          </svg>
         </div>
-        <div class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800">
+        <div
+          class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800"
+        >
           <p>
             It is shown by default, until the collapse plugin adds the
             appropriate classes that we use to style each element. These classes
@@ -96,24 +135,37 @@
           </p>
         </div>
       </div>
-      <div class="accordion-item  ">
+      <div class="accordion-item">
         <div
-          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center "
+          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center"
         >
           <h1 class="text-lg font-bold">Accordion Item #4</h1>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
-            viewBox="0 0 24 24" class="downArrow"
+            viewBox="0 0 24 24"
+            class="downArrow"
           >
             <path
               d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
             ></path>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="upArrow hidden"><path d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"></path></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            class="upArrow hidden"
+          >
+            <path
+              d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"
+            ></path>
+          </svg>
         </div>
-        <div class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800">
+        <div
+          class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800"
+        >
           <p>
             It is shown by default, until the collapse plugin adds the
             appropriate classes that we use to style each element. These classes
@@ -125,24 +177,37 @@
           </p>
         </div>
       </div>
-      <div class="accordion-item ">
+      <div class="accordion-item">
         <div
-          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center "
+          class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center"
         >
           <h1 class="text-lg font-bold">Accordion Item #5</h1>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
-            viewBox="0 0 24 24" class="downArrow"
+            viewBox="0 0 24 24"
+            class="downArrow"
           >
             <path
               d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
             ></path>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="upArrow hidden"><path d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"></path></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            class="upArrow hidden"
+          >
+            <path
+              d="m12 6.879-7.061 7.06 2.122 2.122L12 11.121l4.939 4.94 2.122-2.122z"
+            ></path>
+          </svg>
         </div>
-        <div class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800 ">
+        <div
+          class="accordion-body px-4 py-2 bg-blue-50 hidden border-b border-blue-800"
+        >
           <p>
             It is shown by default, until the collapse plugin adds the
             appropriate classes that we use to style each element. These classes
@@ -156,7 +221,6 @@
       </div>
     </div>
   </body>
-
 
   <script src="./assets/js/app.js"></script>
 </html>
