--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body class="px-4">
     <div class="accordion my-5 border-x border-t border-blue-800 rounded-t-md">
+        <!-- item -1 -->
       <div class="accordion-item">
         <div
           class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center rounded-t-md"
