--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           </p>
         </div>
       </div>
+        <!-- item -3 -->
       <div class="accordion-item">
         <div
           class="accordion-header py-4 bg-blue-100 flex justify-between px-4 border-b border-blue-800 items-center"
